--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
       <ul>
         <li><button>GitHub</button></li>
-        <li><button>Fronend Mentor</button></li>
+        <li><button>Frontend Mentor</button></li>
         <li><button>LinkedIn</button></li>
         <li><button>Twitter</button></li>
         <li><button>Instagram</button></li>
